# nano-db

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/common/: config.hpp  spinlock.hpp  types.hpp
include/core/: distance.hpp  hnsw.hpp  node.hpp
include/storage/: metadata_handler.hpp  mmap_handler.hpp
src/: main.cpp  python_bindings.cpp
src/core/: distance.cpp
src/storage/: mmap_handler.cpp
tests/: CMakeLists.txt
